# torch-scala

./: .gitignore  build.sbt
generate/src/main/java/javacpp_tools/: AdapterInformation.java  Attribute.java  BuildEnabled.java  Builder.java  ClassScanner.java  Context.java  Declaration.java  DeclarationList.java  Declarator.java  EncodingFileWriter.java  Generator.java  IndexedSet.java  Info.java  InfoMap.java  InfoMapper.java  Logger.java  MethodInformation.java  Parameters.java  Parser.java  ParserException.java  Slf4jLogger.java  TemplateMap.java  Token.java  TokenIndexer.java  Tokenizer.java  Type.java  UserClassLoader.java
generate/src/main/java/mapping/: FunctionsMapper.java
generate/src/main/scala/cpp2scala/: ParameterDeclaration.scala  ScalaFromCppGenerator.scala  ScalaMethodDeclaration.scala
project/: JniBuildPlugin.scala  JniGeneratorPlugin.scala
src/main/java/annotations/: C10Optional.java  StdArray.java
src/main/java/generate/: AdapterInformation.java  Attribute.java  BuildEnabled.java  Builder.java  ClassScanner.java  Context.java  Declaration.java  DeclarationList.java  Declarator.java  EncodingFileWriter.java  Generator.java  IndexedSet.java  Info.java  InfoMap.java  InfoMapper.java  Logger.java  MethodInformation.java  Parameters.java  Parser.java  ParserException.java  Slf4jLogger.java  TemplateMap.java  Token.java  TokenIndexer.java  Tokenizer.java  Type.java  UserClassLoader.java
src/main/java/torch_java/api/: Functions.java  Tensor.java
src/main/java/torch_java/examples/: FourierNet.java
src/main/java/torch_java/mapping/: FunctionsMapper.java
src/main/resources/torch_lib/: CMakeCache.txt  Makefile  cmake_install.cmake  test_lib
src/main/scala/examples/: FourierModelApp.scala  GenerateCpp.scala
src/main/scala/torch_scala/: Torch.scala
src/main/scala/torch_scala/api/: Device.scala  Functions.scala  Scalar.scala  Tensor.scala  TensorType.scala  package.scala
src/main/scala/torch_scala/api/aten/: ArrayRef.scala  Backend.scala  ConstQuantizerPtr.scala  Device.scala  DimnameList.scala  Generator.scala  Layout.scala  MemoryFormat.scala  PrimitivePointer.scala  QScheme.scala  Scalar.scala  ScalarType.scala  Shape.scala  SparseTensorRef.scala  Storage.scala  Tensor.scala  TensorOptions.scala  TensorType.scala  TensorVector.scala  TypeExtendedInterface.scala
src/main/scala/torch_scala/api/aten/functions/: Basic.scala  Functions.scala  Math.scala  MathBackward.scala  NativeFunctions.scala
src/main/scala/torch_scala/api/autograd/: Variable.scala
src/main/scala/torch_scala/api/nn/: Module.scala
src/main/scala/torch_scala/api/std/: ArrayBool3.scala
src/main/scala/torch_scala/api/types/: types.scala
src/main/scala/torch_scala/apps/: FourierNet.scala  FourierNetApp.scala
src/main/scala/torch_scala/autograd/: Function.scala  Gradient.scala  Variable.scala
src/main/scala/torch_scala/examples/: FourierNet.scala
src/main/scala/torch_scala/native_generator/: Generate.scala  GenerateCpp.scala  ParameterDeclaration.scala  ScalaFromCppGenerator.scala  ScalaMethodDeclaration.scala
src/main/scala/viz/: Plot.scala
src/native/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  helper.h  java_torch_lib.cpp  jniNativeFunctions.cpp  jnijavacpp.cpp  test.cpp
src/native/adapters/: OptionalAdapter.h  StdArrayAdapter.h
src/test/scala/torch_scala/autograd/: AutoGradSpec.scala  FunctionSpec.scala
